# scivex

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  USECASE.md  USECASE_PY.md  cliff.toml
.cargo/: audit.toml
crates/pyscivex/: CHANGELOG_PY.md  Cargo.toml  Makefile  README.md  README_PY.md  pyproject.toml
crates/pyscivex/docs/: Makefile  conf.py  getting_started.rst  index.rst
crates/pyscivex/docs/api/: index.rst
crates/pyscivex/examples/: 01_tensor_basics.py  02_dataframe_tutorial.py  03_ml_pipeline.py  04_neural_network.py  05_visualization.py  06_statistics.py  07_signal_processing.py  08_gpu_computing.py
crates/pyscivex/python/pyscivex/: __init__.py  __init__.pyi  compat.py  logging.py  progress.py
crates/pyscivex/src/: fft.rs  frame.rs  gpu.rs  graph.rs  image.rs  io.rs  lib.rs  linalg.rs  ml.rs  nlp.rs  nn.rs  optim.rs  random.rs  rl.rs  signal.rs  stats.rs  sym.rs  tensor.rs  viz.rs
crates/pyscivex/tests/: conftest.py  test_fft.py  test_frame.py  test_gpu.py  test_graph.py  test_image.py  test_linalg.py  test_ml.py  test_nlp.py  test_nn.py  test_optim.py  test_random.py  test_rl.py  test_signal.py  test_stats.py  test_sym.py  test_tensor.py  test_viz.py
crates/scivex-core/: Cargo.toml  README.md  build.rs
crates/scivex-core/benches/: core_benchmarks.rs
crates/scivex-core/examples/: quick_bench.rs
crates/scivex-core/fuzz/: Cargo.toml
crates/scivex-core/fuzz/fuzz_targets/: fuzz_einsum_parse.rs  fuzz_reshape.rs  fuzz_tensor_index.rs
crates/scivex-core/src/: arena.rs  complex.rs  dtype.rs  error.rs  jit.rs  lib.rs  math.rs  parallel.rs  promote.rs  spatial.rs
crates/scivex-core/src/fft/: mod.rs
crates/scivex-core/src/linalg/: blas.rs  mod.rs  sparse.rs  tensor_decomp.rs
crates/scivex-core/src/random/: mod.rs
crates/scivex-core/tests/: edge_cases.rs  numpy_reference.rs  property_tests.rs  reference_values.rs
crates/scivex-ffi/: Cargo.toml  README.md
crates/scivex-ffi/include/: scivex.h
crates/scivex-ffi/src/: error.rs  frame.rs  lib.rs  ml.rs  stats.rs  tensor.rs  viz.rs
crates/scivex-frame/: Cargo.toml  README.md
crates/scivex-frame/benches/: frame_benchmarks.rs
crates/scivex-frame/src/: dtype.rs  error.rs  groupby.rs  lib.rs  multiindex.rs  parallel.rs  schema.rs
crates/scivex-frame/tests/: edge_cases.rs  property_tests.rs
crates/scivex-gpu/: Cargo.toml  README.md
crates/scivex-gpu/src/: backend.rs  device.rs  error.rs  lib.rs  ops.rs  optim.rs  shader_opt.rs  tensor.rs
crates/scivex-graph/: Cargo.toml  README.md
crates/scivex-graph/benches/: graph_benchmarks.rs
crates/scivex-graph/src/: centrality.rs  community.rs  connectivity.rs  digraph.rs  error.rs  flow.rs  graph.rs  lib.rs  mst.rs  shortest.rs  traversal.rs
crates/scivex-image/: Cargo.toml  README.md
crates/scivex-image/src/: augment.rs  color.rs  contour.rs  draw.rs  error.rs  features.rs  filter.rs  histogram.rs  hough.rs  image.rs  lanczos.rs  lib.rs  matching.rs  morphology.rs  optical_flow.rs  orb.rs  segment.rs  transform.rs
crates/scivex-io/: Cargo.toml  Cargo.toml.bak  README.md
crates/scivex-io/fuzz/: Cargo.toml
crates/scivex-io/src/: arrow_conv.rs  common.rs  error.rs  lib.rs  lib.rs.bak  tensor_conv.rs
crates/scivex-io/tests/: csv_edge_cases.rs  json_edge_cases.rs
crates/scivex-ml/: Cargo.toml  README.md
crates/scivex-ml/benches/: ml_benchmarks.rs
crates/scivex-ml/src/: ann.rs  automl.rs  error.rs  feature_engineering.rs  lib.rs  model_selection.rs  persist.rs  pipeline.rs  search.rs  traits.rs
crates/scivex-ml/tests/: reference_values.rs  sklearn_reference.rs
crates/scivex-nlp/: Cargo.toml  README.md
crates/scivex-nlp/src/: embeddings.rs  error.rs  lda.rs  lib 2.rs  ner.rs  pos.rs  sentiment.rs  similarity.rs  stem.rs  text.rs  tokenize.rs  unigram.rs  vectorize.rs  word2vec.rs  wordpiece.rs
crates/scivex-nlp/tests/: sklearn_nlp_reference.rs
crates/scivex-nn/: Cargo.toml  README.md
crates/scivex-nn/benches/: nn_benchmarks.rs
crates/scivex-nn/src/: data.rs  error.rs  explain.rs  functional.rs  init.rs  lib.rs  loss.rs  ops.rs  persist.rs  serve.rs  variable.rs
crates/scivex-optim/: Cargo.toml  README.md
crates/scivex-optim/src/: error.rs  lib.rs  sparse_solve.rs
crates/scivex-rl/: Cargo.toml  README.md
crates/scivex-rl/src/: error.rs  her.rs  lib.rs  logger.rs  replay.rs  replay_continuous.rs
crates/scivex-signal/: Cargo.toml  README.md
crates/scivex-signal/benches/: signal_benchmarks.rs
crates/scivex-signal/src/: audio.rs  convolution.rs  error.rs  features.rs  filter.rs  lib.rs  peak.rs  resample.rs  rhythm.rs  spectral.rs  wavelet.rs  window.rs
crates/scivex-signal/tests/: reference_values.rs  scipy_signal_reference.rs
crates/scivex-stats/: Cargo.toml  README.md
crates/scivex-stats/benches/: stats_benchmarks.rs
crates/scivex-stats/src/: bayesian_optim.rs  confidence.rs  correction.rs  correlation.rs  descriptive.rs  effect_size.rs  error.rs  garch.rs  glm.rs  hypothesis.rs  kalman.rs  lib.rs  mixed_effects.rs  online.rs  prophet.rs  regression.rs  special.rs  survival.rs  timeseries.rs  ts_anomaly.rs  ts_features.rs  var.rs
crates/scivex-stats/tests/: property_tests.rs  reference_values.rs  scipy_reference.rs
crates/scivex-sym/: Cargo.toml  README.md
crates/scivex-sym/benches/: sym_benchmarks.rs
crates/scivex-sym/src/: algebra.rs  diff.rs  error.rs  expr.rs  integrate.rs  lib.rs  polynomial.rs  simplify.rs  solve.rs  taylor.rs
crates/scivex-sym/tests/: property_tests.rs  reference_values.rs  sympy_reference.rs
crates/scivex-viz/: Cargo.toml  README.md
crates/scivex-viz/src/: annotation.rs  area.rs  axes.rs  chart.rs  color.rs  contour.rs  element.rs  error.rs  error_bar.rs  figure.rs  heatmap.rs  joint_plot.rs  latex.rs  layout.rs  lib.rs  pair_plot.rs  pie.rs  plot.rs  polar.rs  scale.rs  stat_plots.rs  statistical.rs  style.rs  surface.rs  violin.rs
crates/scivex-wasm/: Cargo.toml  README.md
crates/scivex-wasm/src/: frame.rs  graph.rs  lib.rs  ml.rs  signal.rs  stats.rs  sym.rs  tensor.rs
scivex/: Cargo.toml
scivex/src/: lib.rs
(+312 files in other folders)
