[workspace]
members = [
    "scivex",
    "crates/scivex-core",
    "crates/scivex-frame",
    "crates/scivex-stats",
    "crates/scivex-io",
    "crates/scivex-optim",
    "crates/scivex-viz",
    "crates/scivex-ml",
    "crates/scivex-nn",
    "crates/scivex-image",
    "crates/scivex-signal",
    "crates/scivex-graph",
    "crates/scivex-nlp",
    "crates/scivex-sym",
    "crates/scivex-wasm",
    "crates/scivex-gpu",
    "crates/scivex-ffi",
    "crates/scivex-rl",
    "crates/pyscivex",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Scivex Contributors"]
edition = "2024"
license = "MIT"
repository = "https://github.com/scivex/scivex"
homepage = "https://github.com/scivex/scivex"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
many_single_char_names = "allow"
similar_names = "allow"
doc_markdown = "allow"
