[package]
name = "scivex"
description = "A comprehensive Rust library replacing the Python data science ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
scivex-core = { path = "../crates/scivex-core" }
scivex-frame = { path = "../crates/scivex-frame", optional = true }
scivex-stats = { path = "../crates/scivex-stats", optional = true }
scivex-io = { path = "../crates/scivex-io", optional = true }
scivex-optim = { path = "../crates/scivex-optim", optional = true }
scivex-viz = { path = "../crates/scivex-viz", optional = true }
scivex-ml = { path = "../crates/scivex-ml", optional = true }
scivex-nn = { path = "../crates/scivex-nn", optional = true }
scivex-image = { path = "../crates/scivex-image", optional = true }
scivex-signal = { path = "../crates/scivex-signal", optional = true }
scivex-graph = { path = "../crates/scivex-graph", optional = true }
scivex-nlp = { path = "../crates/scivex-nlp", optional = true }
scivex-sym = { path = "../crates/scivex-sym", optional = true }
scivex-gpu = { path = "../crates/scivex-gpu", optional = true }
scivex-rl = { path = "../crates/scivex-rl", optional = true }

[features]
default = ["core"]
core = []
frame = ["dep:scivex-frame"]
stats = ["dep:scivex-stats"]
io = ["dep:scivex-io"]
optim = ["dep:scivex-optim"]
viz = ["dep:scivex-viz"]
ml = ["dep:scivex-ml"]
nn = ["dep:scivex-nn"]
image = ["dep:scivex-image"]
signal = ["dep:scivex-signal"]
graph = ["dep:scivex-graph"]
nlp = ["dep:scivex-nlp"]
sym = ["dep:scivex-sym"]
gpu = ["dep:scivex-gpu"]
nn-gpu = ["nn", "gpu", "scivex-nn/gpu"]
rl = ["dep:scivex-rl"]
frame-regex = ["frame", "scivex-frame/regex"]
image-png = ["image", "scivex-image/png"]
image-jpeg = ["image", "scivex-image/jpeg"]
simd = ["scivex-core/simd"]
parallel = ["scivex-core/parallel"]
serde-support = [
    "scivex-core/serde-support",
    "scivex-frame?/serde-support",
    "scivex-stats?/serde-support",
    "scivex-io?/serde-support",
    "scivex-optim?/serde-support",
    "scivex-viz?/serde-support",
    "scivex-ml?/serde-support",
    "scivex-nn?/serde-support",
    "scivex-image?/serde-support",
    "scivex-signal?/serde-support",
    "scivex-graph?/serde-support",
    "scivex-nlp?/serde-support",
    "scivex-sym?/serde-support",
]
full = ["core", "frame", "stats", "io", "optim", "viz", "ml", "nn", "image", "image-png", "image-jpeg", "signal", "graph", "nlp", "sym", "rl"]
