[package]
name = "scivex-core"
description = "Scivex — Tensors, linear algebra, FFT, and math primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["tensor", "linear-algebra", "fft", "simd", "scientific-computing"]
categories = ["science", "mathematics"]

[dependencies]
half = { version = "2", optional = true }
libc = { version = "0.2", optional = true }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
simd = []
parallel = ["dep:rayon"]
serde-support = ["dep:serde"]
mixed-precision = ["dep:half"]
blas-backend = ["dep:libc"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "core_benchmarks"
harness = false

[lints]
workspace = true
