[package]
name = "scivex-frame"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — DataFrames, Series, GroupBy"

[lints]
workspace = true

[dependencies]
scivex-core = { path = "../scivex-core" }
rayon = { version = "1", optional = true }
regex = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "frame_benchmarks"
harness = false

[features]
parallel = ["dep:rayon"]
regex = ["dep:regex"]
serde-support = ["dep:serde", "scivex-core/serde-support"]
