[package]
name = "scivex-frame"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — DataFrames, Series, GroupBy"
homepage.workspace = true
rust-version.workspace = true
keywords = ["dataframe", "data-analysis", "series", "tabular", "scientific-computing"]
categories = ["science", "data-structures"]

[lints]
workspace = true

[dependencies]
scivex-core = { version = "0.1.0", path = "../scivex-core" }
rayon = { version = "1", optional = true }
regex = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "frame_benchmarks"
harness = false

[features]
parallel = ["dep:rayon"]
regex = ["dep:regex"]
serde-support = ["dep:serde", "scivex-core/serde-support"]
