[package]
name = "scivex-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Graph data structures, algorithms, and network analysis"
homepage.workspace = true
rust-version.workspace = true
keywords = ["graph", "network-analysis", "algorithms", "shortest-path", "scientific-computing"]
categories = ["science", "algorithms"]

[lints]
workspace = true

[dependencies]
scivex-core = { version = "0.1.0", path = "../scivex-core" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_benchmarks"
harness = false

[features]
serde-support = ["dep:serde", "scivex-core/serde-support"]
