[package]
name = "scivex-ml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Classical machine learning: trees, ensembles, clustering, pipelines"

[lints]
workspace = true

[dependencies]
scivex-core = { path = "../scivex-core" }
scivex-stats = { path = "../scivex-stats" }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ml_benchmarks"
harness = false

[features]
parallel = ["dep:rayon", "scivex-core/parallel"]
serde-support = ["dep:serde", "scivex-core/serde-support", "scivex-stats/serde-support"]
