[package]
name = "scivex-ml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Classical machine learning: trees, ensembles, clustering, pipelines"
homepage.workspace = true
rust-version.workspace = true
keywords = ["machine-learning", "random-forest", "svm", "clustering", "scientific-computing"]
categories = ["science", "algorithms"]

[lints]
workspace = true

[dependencies]
scivex-core = { version = "0.1.0", path = "../scivex-core" }
scivex-stats = { version = "0.1.0", path = "../scivex-stats" }
rayon = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ml_benchmarks"
harness = false

[features]
parallel = ["dep:rayon", "scivex-core/parallel"]
serde-support = ["dep:serde", "scivex-core/serde-support", "scivex-stats/serde-support"]
