[package]
name = "scivex-nn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Neural networks, autograd, layers, optimizers"

[lints]
workspace = true

[dependencies]
scivex-core = { path = "../scivex-core" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "nn_benchmarks"
harness = false

[features]
serde-support = ["dep:serde", "scivex-core/serde-support"]
