[package]
name = "scivex-nn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Neural networks, autograd, layers, optimizers"
homepage.workspace = true
rust-version.workspace = true
keywords = ["neural-network", "deep-learning", "autograd", "backpropagation", "scientific-computing"]
categories = ["science", "algorithms"]

[lints]
workspace = true

[dependencies]
scivex-core = { version = "0.1.1", path = "../scivex-core" }
scivex-gpu = { version = "0.1.1", path = "../scivex-gpu", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "nn_benchmarks"
harness = false

[features]
serde-support = ["dep:serde", "scivex-core/serde-support"]
gpu = ["dep:scivex-gpu"]
mixed-precision = ["scivex-core/mixed-precision"]
