[package]
name = "scivex-optim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Optimization, root finding, and numerical integration"

[lints]
workspace = true

[dependencies]
scivex-core = { path = "../scivex-core" }
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde-support = ["dep:serde", "scivex-core/serde-support"]
