[package]
name = "scivex-optim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Optimization, root finding, and numerical integration"
homepage.workspace = true
rust-version.workspace = true
keywords = ["optimization", "minimization", "numerical-methods", "ode", "scientific-computing"]
categories = ["science", "mathematics"]

[lints]
workspace = true

[dependencies]
scivex-core = { version = "0.1.0", path = "../scivex-core" }
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde-support = ["dep:serde", "scivex-core/serde-support"]
