[package]
name = "scivex-rl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Reinforcement learning: environments, DQN, PPO, A2C"

[lints]
workspace = true

[dependencies]
scivex-core = { path = "../scivex-core" }
scivex-nn = { path = "../scivex-nn" }
