[package]
name = "scivex-rl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Reinforcement learning: environments, DQN, PPO, A2C"
homepage.workspace = true
rust-version.workspace = true
keywords = ["reinforcement", "dqn", "ppo", "gym", "scientific"]
categories = ["science", "algorithms"]

[lints]
workspace = true

[dependencies]
scivex-core = { version = "0.1.0", path = "../scivex-core" }
scivex-nn = { version = "0.1.0", path = "../scivex-nn" }
