[package]
name = "scivex-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Signal processing, FFT, wavelets, audio"

[lints]
workspace = true

[dependencies]
scivex-core = { path = "../scivex-core" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "signal_benchmarks"
harness = false

[features]
serde-support = ["dep:serde", "scivex-core/serde-support"]
