[package]
name = "scivex-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Signal processing, FFT, wavelets, audio"
homepage.workspace = true
rust-version.workspace = true
keywords = ["signal-processing", "fft", "wavelets", "audio", "scientific-computing"]
categories = ["science", "multimedia::audio"]

[lints]
workspace = true

[dependencies]
scivex-core = { version = "0.1.0", path = "../scivex-core" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "signal_benchmarks"
harness = false

[features]
serde-support = ["dep:serde", "scivex-core/serde-support"]
