[package]
name = "scivex-stats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Statistical distributions, hypothesis tests, correlation, regression"

[lints]
workspace = true

[dependencies]
scivex-core = { path = "../scivex-core" }
