[package]
name = "scivex-stats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Statistical distributions, hypothesis tests, correlation, regression"

[lints]
workspace = true

[dependencies]
scivex-core = { path = "../scivex-core" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "stats_benchmarks"
harness = false

[features]
serde-support = ["dep:serde", "scivex-core/serde-support"]
