[package]
name = "scivex-sym"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — Symbolic math, CAS, and expression simplification"
homepage.workspace = true
rust-version.workspace = true
keywords = ["symbolic-math", "computer-algebra", "calculus", "expression", "scientific-computing"]
categories = ["science", "mathematics"]

[lints]
workspace = true

[dependencies]
scivex-core = { version = "0.1.0", path = "../scivex-core" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "sym_benchmarks"
harness = false

[features]
serde-support = ["dep:serde", "scivex-core/serde-support"]
