[package]
name = "scivex-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Scivex — WebAssembly bindings for browser and Node.js"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
scivex-core = { path = "../scivex-core" }
scivex-frame = { path = "../scivex-frame" }
scivex-stats = { path = "../scivex-stats" }
scivex-ml = { path = "../scivex-ml" }
scivex-sym = { path = "../scivex-sym" }
scivex-signal = { path = "../scivex-signal" }
scivex-graph = { path = "../scivex-graph" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true

[features]
default = []
